codegenerator/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__envio_dts_code_generated_for_evm.snap
---
source: cli/src/hbs_templating/codegen_templates.rs
assertion_line: 2431
expression: project_template.envio_dts_code
---
export type EvmChains = {
  "ethereumMainnet": { id: 1 };
};
export type EvmContracts = {
  "Contract1": {};
};
export type FuelChains = {};
export type FuelContracts = {};
export type SvmChains = {};
export type Enums = {
  Status: "ACTIVE" | "INACTIVE";
};
export type Entities = {
  "EmptyEntity": {
    "id": string;
    "emptyField": string;
    "status": Enums.Status;
  };
};
