codegenerator/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__envio_dts_code_generated_for_fuel.snap
---
source: cli/src/hbs_templating/codegen_templates.rs
assertion_line: 2437
expression: project_template.envio_dts_code
---
export type EvmChains = {};
export type EvmContracts = {};
export type FuelChains = {
  "0": { id: 0 };
};
export type FuelContracts = {
  "Greeter": {};
};
export type SvmChains = {};
export namespace Enums {}
export namespace Entities {
  export type EmptyEntity = {
    id: string;
    emptyField: string;
  };
}
