codegenerator/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_json_code_with_all_options.snap
---
source: cli/src/hbs_templating/codegen_templates.rs
expression: project_template.internal_config_json_code
---
{
  "version": "0.0.1-dev",
  "name": "test-all-options",
  "description": "Test config with all options set",
  "handlers": "custom/handlers",
  "multichain": "ordered",
  "fullBatchSize": 1000,
  "rollbackOnReorg": false,
  "saveFullHistory": true,
  "rawEvents": true,
  "evm": {
    "chains": {
      "ethereumMainnet": {
        "id": 1,
        "startBlock": 0,
        "rpcs": [
          {
            "url": "https://eth.com",
            "for": "sync",
            "initialBlockInterval": 10000,
            "backoffMultiplicative": 0.8,
            "accelerationAdditive": 2000,
            "intervalCeiling": 10000,
            "backoffMillis": 5000,
            "queryTimeoutMillis": 20000,
            "pollingInterval": 2000
          }
        ]
      }
    },
    "contracts": {
      "Contract1": {
        "abi": [{"type":"event","name":"NewGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false},{"type":"event","name":"UpdatedGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false}],
        "handler": "./src/EventHandler.js",
        "events": [
          {
            "event": "NewGravatar(uint256 id, address owner, string displayName, string imageUrl)"
          },
          {
            "event": "UpdatedGravatar(uint256 id, address owner, string displayName, string imageUrl)"
          }
        ]
      }
    },
    "addressFormat": "checksum"
  },
  "enums": {
    "Status": [
      "ACTIVE",
      "INACTIVE"
    ]
  },
  "entities": [
    {
      "name": "EmptyEntity",
      "properties": [
        {
          "name": "id",
          "type": "string",
          "isPrimaryKey": true
        },
        {
          "name": "emptyField",
          "type": "string"
        },
        {
          "name": "status",
          "type": "enum",
          "enum": "Status"
        },
        {
          "name": "optionalStatus",
          "type": "enum",
          "isNullable": true,
          "enum": "Status"
        },
        {
          "name": "related",
          "type": "entity",
          "linkedEntity": "RelatedEntity",
          "entity": "RelatedEntity"
        },
        {
          "name": "optionalRelated",
          "type": "entity",
          "isNullable": true,
          "linkedEntity": "RelatedEntity",
          "entity": "RelatedEntity"
        },
        {
          "name": "tags",
          "type": "string",
          "isArray": true
        },
        {
          "name": "optionalTags",
          "type": "string",
          "isNullable": true,
          "isArray": true
        }
      ]
    },
    {
      "name": "RelatedEntity",
      "properties": [
        {
          "name": "id",
          "type": "string",
          "isPrimaryKey": true
        },
        {
          "name": "name",
          "type": "string"
        }
      ]
    }
  ]
}
