codegenerator/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_json_code_with_no_contracts.snap
---
source: cli/src/hbs_templating/codegen_templates.rs
expression: project_template.internal_config_json_code
---
{
  "version": "0.0.1-dev",
  "name": "config4",
  "description": "Gravatar for Ethereum",
  "evm": {
    "chains": {
      "ethereumMainnet": {
        "id": 1,
        "startBlock": 0,
        "hypersync": "https://myskar.com"
      },
      "polygon": {
        "id": 137,
        "startBlock": 0,
        "hypersync": "https://137.hypersync.xyz"
      }
    },
    "addressFormat": "checksum"
  },
  "enums": {},
  "entities": [
    {
      "name": "EmptyEntity",
      "properties": [
        {
          "name": "id",
          "type": "string",
          "isPrimaryKey": true
        },
        {
          "name": "emptyField",
          "type": "string"
        }
      ]
    }
  ]
}
