codegenerator/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_ts_code_generated_for_fuel.snap
---
source: cli/src/hbs_templating/codegen_templates.rs
expression: project_template.internal_config_ts_code
---
import GreeterAbi from "../abis/greeter-abi.json";
import type { IndexerConfig } from "envio";

export default {
  name: "Fuel indexer",
  rollbackOnReorg: false,
  fuel: {
    chains: {
      "0": { id: 0, startBlock: 0 },
    },
    contracts: {
      "Greeter": { abi: GreeterAbi },
    },
  },
} as const satisfies IndexerConfig;
