codegenerator/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_ts_code_omits_default_values.snap
---
source: cli/src/hbs_templating/codegen_templates.rs
expression: project_template.internal_config_ts_code
---
import type { IndexerConfig } from "envio";

export default {
  name: "config1",
  description: "Gravatar for Ethereum",
  evm: {
    chains: {
      "ethereumMainnet": { id: 1, startBlock: 0 }
    },
    contracts: {
      "Contract1": { abi: [{"type":"event","name":"NewGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false},{"type":"event","name":"UpdatedGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false}] }
    },
    addressFormat: "checksum",
    eventDecoder: "hypersync"
  }
} as const satisfies IndexerConfig;
